# babelslack

./: .gitignore  README.md  babelslack.cabal  stack.yaml
app/: Config.hs  Main.hs
src/: Lib.hs  Translate.hs
