name:                babelslack
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/supermario/babelslack#readme
license:             BSD3
license-file:        LICENSE
author:              Mario Rogic
maintainer:          hello@mario.net.au
copyright:           2017 Mario Rogic
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Translate
  build-depends:       base >= 4.7 && < 5
                     , text
                     , google-translate
                     , http-client

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable babelslack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , babelslack
                     , google-translate
                     , slack
                     -- translations
                     , text
                     , http-client
                     , http-client-tls
                     , bytestring
                     , html-entities
                     , async
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite babelslack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , babelslack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/supermario/babelslack
